Ajout des jeux de données + fichiers CSV

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ fredi_v2/src/desktop.ini
 fredi_v2/src/DAO/desktop.ini
 fredi_v2/src/classes/desktop.ini
 fredi_v2/src/css/desktop.ini
+inc/desktop.ini
