--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,15 @@ fredi_v2/src/DAO/desktop.ini
 fredi_v2/src/classes/desktop.ini
 fredi_v2/src/css/desktop.ini
 inc/desktop.ini
+assets/css/desktop.ini
+desktop.ini
+assets/desktop.ini
+assets/images/desktop.ini
+assets/js/desktop.ini
+classes/desktop.ini
+config/desktop.ini
+forms/desktop.ini
+sql/desktop.ini
+sql/Ancienne BDD/desktop.ini
+sql/CSV/desktop.ini
+sql/Jeux de donnees/desktop.ini
